--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,8 +75,10 @@
 
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  /* padding-left: 20px;
+  padding-right: 20px; */
+
+  text-align: center;
 
   height: 50px;
   min-height: 50px;
@@ -94,7 +96,7 @@
   cursor: not-allowed;
 }
 
-.edit-button {
+.delete-button {
   background-color: #ececec;
   color: black;
 }
